--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Lekce 6</title>
 </head>
-<body>
+<body class="body">
     <h1>Wellcome to the lekce 6</h1>
     
 </body>
